--- a/resume.css
+++ b/resume.css
@@ -44,14 +44,14 @@ strong { font-weight: bold; }
 li { line-height: 24px; border-bottom: 1px solid #ccc; }
 p.enlarge { font-size: 144%; /*padding-right: 6.5em;*/ line-height: 24px; }
 p.enlarge span { color: #000 }
-.contact-info { margin-top: 7px; }
+.contact-info { margin-top: 7px; margin-right: 10px;}
 .first h2 { font-style: italic; }
 .last { border-bottom: 0 }
 
 
 /* //-- section styles -- */
 
-a#pdf { display: block; float: left; background: #666; color: white; padding: 6px 12px; margin-bottom: 6px; text-decoration: none;  }
+a#pdf { display: block; float: right; color: white; padding: 6px 12px; margin-bottom: 6px; margin-left: 10px; text-decoration: none;  }
 a#pdf:hover { background: #222; }
 
 .job { position: relative; margin-bottom: 1em; padding-bottom: 1em; border-bottom: 1px solid #ccc; }
